Fix horizontal overflow in modal from title

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -486,7 +486,7 @@ dialog.my-calendar-modal #modal-title {
 	margin-top: 0;
 	padding: 15px;
 	background: #f3f3f3;
-	width: 100%;
+	width: calc( 100% - 30px );
 	z-index: 1;
 }
 
